2004-09-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Updated to version 0.2.

	* src/lang.py:
	Added Czech translation.

2004-09-26  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/lang.py:
	Added German and Polish translations.

	* src/legacy/icqt.py:
	Import all users from groups.
	Notify user when connection isn't active.
	Now we retrieve away messages properly.
	Don't save if no changes.
	Don't save immediately during initial import.
	Fixed poor handling of received messages.

2004-09-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* *:
	Initial setup of code and distribution.
	I'm not doing real changelog stuff until I get to a certain point.